--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,11 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+gallery/config.php
+img/folio_1.ai
+img/folio_2.ai
+img/folio_3.ai
+img/folio_welcome/folio_1.ai
+img/folio_welcome/folio_2.ai
+img/folio_welcome/folio_3.ai
