--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,10 @@ img/folio_3.ai
 img/folio_welcome/folio_1.ai
 img/folio_welcome/folio_2.ai
 img/folio_welcome/folio_3.ai
+img/AI/alarm16.svg
+img/AI/analyze_bz_folio_1.ai
+img/AI/concierge_logo.ai
+img/AI/folio_1.ai
+img/AI/folio_2.ai
+img/AI/folio_3.ai
+img/AI/off_ramp.ai
