--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,9 +1,10 @@
 image: google/cloud-sdk
 
 pipelines:
-  default:
-    - step:
-        script:
-          - echo ${GOOGLE_SERVICE_ACC_KEY} > client-secret.json
-          - gcloud auth activate-service-account --key-file=client-secret.json
-          - gsutil -m rsync -dr site gs://msp.naturalcapitalproject.org
+  branches:
+      master:
+        - step:
+            script:
+              - echo ${GOOGLE_SERVICE_ACC_KEY} > client-secret.json
+              - gcloud auth activate-service-account --key-file=client-secret.json
+              - gsutil -m rsync -dr site gs://msp.naturalcapitalproject.org
